--- a/.github/wproklfows/abot-postman (1).yml
+++ b/.github/wproklfows/abot-postman (1).yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   abot-tests:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux]
 
     steps:
     - name: Checkout Code
@@ -17,7 +17,7 @@ jobs:
 
     - name: Run Postman Collection using Newman
       run: |
-        newman run ABot_API.postman_collection.json           --environment ABot_environment.json           --reporters cli,html,json           --reporter-html-export abot-report.html           --reporter-json-export abot-report.json
+        newman run ABot_API.modified.postman_collection.json           --environment ABot_environment.json           --reporters cli,html,json           --reporter-html-export abot-report.html           --reporter-json-export abot-report.json
 
     - name: Convert JSON Report to CSV
       run: |
